convert op_add to bigint

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ hex = "0.3"
 linked-hash-map = "0.5"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
 murmur3 = "0.4"
+num-bigint = "0.2"
+num-traits = "0.2"
 rand = "0.5"
 ring = "0.14"
 ripemd160 = "0.7"
